--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 body {
   margin: 0px;
   color: #333333;
+  padding-top: 4rem;
   --type-first: Helvetica, Arial, sans-serif;
   --type-segond: "Spectral", Georgia;
   font-family:  var(--type-first);
@@ -30,6 +31,10 @@ button, input {
   font-size: 1rem;
   font-family: var(--type-first);
   color: #333333;
+}
+
+a {
+  text-decoration: none;
 }
 
 .container {
