--- a/src/pages/Login/LoginForm/LoginForm.module.css
+++ b/src/pages/Login/LoginForm/LoginForm.module.css
@@ -1,5 +1,7 @@
 .form {
   margin-bottom: 2rem;
+  max-width: 30rem;
+  padding: 1rem;
 }
 
 .perdeu {
@@ -39,4 +41,10 @@
   height: 0.5rem;
   width: 3rem;
   border-radius: 0.2rem;
+}
+
+@media (max-width: 40rem) {
+  .form {
+    max-width: initial;
+  }
 }
