--- a/src/pages/Photo/PhotoContent.module.css
+++ b/src/pages/Photo/PhotoContent.module.css
@@ -12,6 +12,12 @@
   animation: enter 0.3s forwards;
 }
 
+.single.photo {
+  border-radius: 0px;
+  grid-template-columns: 1fr;
+  height: auto;
+}
+
 @keyframes enter {
   to {
     opacity: initial;
@@ -27,8 +33,14 @@
   grid-row: 1 / 4;
 }
 
-.comments {
-  padding: 0 2rem;
+.single .details {
+  padding: 1rem 0px 0px 0px;
+}
+
+.single .img {
+  grid-row: 1;
+  border-radius: 0.2rem;
+  overflow: hidden;
 }
 
 @media (max-width: 64rem) {
