--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Spectral:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Spectral:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
 
 * {
   box-sizing: border-box;
@@ -10,14 +10,18 @@ body {
   padding-top: 4rem;
   --type-first: Helvetica, Arial, sans-serif;
   --type-segond: "Spectral", Georgia;
-  font-family:  var(--type-first);
+  font-family: var(--type-first);
 }
 
-h1, h2, h3, h4 {
+h1,
+h2,
+h3,
+h4 {
   margin: 0px;
 }
 
-ul, li {
+ul,
+li {
   list-style: none;
   margin: 0px;
   padding: 0px;
@@ -28,7 +32,8 @@ img {
   max-width: 100%;
 }
 
-button, input {
+button,
+input {
   display: block;
   font-size: 1rem;
   font-family: var(--type-first);
@@ -79,4 +84,13 @@ a {
     opacity: 1;
     transform: initial;
   }
+}
+.App {
+  display: flex;
+  flex-direction: column;
+  min-height: calc(100vh + 10rem);
+}
+
+.App > main {
+  flex: 1;
 }
